--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "wk3hw",
-    "slug": "wk3hw",
+    "name": "wk3",
+    "slug": "wk3",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
